Fix review spacing

--- a/imports/ui/css/Review.css
+++ b/imports/ui/css/Review.css
@@ -168,9 +168,9 @@
   color: #000000;
   font-size: 13px;
   letter-spacing: 0.1px;
-  text-align: center;
+  text-align: left;
   padding-top: 5px;
-  padding-left: 20px;
+  padding-left: 35px;
   padding-right: 0px;
   padding-bottom: 10px;
 }
@@ -192,4 +192,9 @@
 
 .space-review-buttons {
   margin-left: 5px;
+}
+
+.noLeftRightPadding{
+  padding-left: 0px;
+  padding-right: 0px;
 }
